<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#EEE"
            android:text="@string/id_pessoa"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/id_pessoa"
            android:layout_width="256dp"
            android:layout_height="30dp"
            android:background="@drawable/login_edittext_bg"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:autofillHints=""
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#EEE"
            android:text="@string/saldo"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/saldo"
            android:layout_width="256dp"
            android:layout_height="30dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:autofillHints=""
            android:background="@drawable/login_edittext_bg"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:padding="0dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#EEE"
            android:text="@string/limitesaq"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/limiteSaqueDiario"
            android:layout_width="256dp"
            android:layout_height="30dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:autofillHints=""
            android:background="@drawable/login_edittext_bg"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:padding="0dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/ativo"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:outlineSpotShadowColor="@color/black"
            android:text="@string/contaAtiva"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#EEE"
            android:text="@string/tipoConta"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/tipoConta"
            android:layout_width="256dp"
            android:layout_height="30dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:autofillHints=""
            android:background="@drawable/login_edittext_bg"
            android:gravity="center"
            android:inputType="number"
            android:padding="0dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginBottom="50dp"/>



        <Button
            android:id="@+id/btn_criar_conta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="50dp"/>



    </LinearLayout>

</ScrollView>