<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#EEE"
            android:text="@string/Nome"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_edittext_bg"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#CCC"
            android:hint="@string/Nome"
            android:gravity="center_horizontal"
            android:autofillHints=""
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#EEE"
            android:text="@string/cpf"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="number"
            android:background="@drawable/login_edittext_bg"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#CCC"
            android:hint="@string/cpf"
            android:gravity="center_horizontal"
            android:autofillHints="" />

        <DatePicker
            android:id="@+id/dtNascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="50dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="50dp" />

        <Button
            android:id="@+id/btn_register_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:text="@string/criar_pessoa"
            android:textColor="@color/black"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="80dp"/>



    </LinearLayout>

</ScrollView>